@startuml

title __POST's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.post {
      abstract class com.architectica.socialcomponents.main.post.BaseCreatePostActivity {
          # descriptionEditText : EditText
          # imageContainer : RelativeLayout
          # imageView : ImageView
          # progressBar : ProgressBar
          # titleEditText : EditText
          # uploadTxt : TextView
          + getDescriptionText()
          + getImageUri()
          + getTitleText()
          + onPostSavedSuccess()
          + requestImageViewFocus()
          + setDescriptionError()
          + setTitleError()
          # getImageView()
          # getProgressView()
          # onCreate()
          # onImagePikedAction()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.post {
      abstract class com.architectica.socialcomponents.main.post.BaseCreatePostPresenter {
          # creatingPost : boolean
          + BaseCreatePostPresenter()
          + doSavePost()
          + onPostSaved()
          # attemptCreatePost()
          {abstract} # getSaveFailMessage()
          {abstract} # isImageRequired()
          {abstract} # savePost()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.post {
      interface com.architectica.socialcomponents.main.post.BaseCreatePostView {
          {abstract} + getDescriptionText()
          {abstract} + getImageUri()
          {abstract} + getTitleText()
          {abstract} + onPostSavedSuccess()
          {abstract} + requestImageViewFocus()
          {abstract} + setDescriptionError()
          {abstract} + setTitleError()
      }
    }
  }
  

  com.architectica.socialcomponents.main.post.BaseCreatePostActivity .up.|> com.architectica.socialcomponents.main.post.BaseCreatePostView
  com.architectica.socialcomponents.main.post.BaseCreatePostActivity -up-|> com.architectica.socialcomponents.main.pickImageBase.PickImageActivity
  com.architectica.socialcomponents.main.post.BaseCreatePostPresenter .up.|> com.architectica.socialcomponents.managers.listeners.OnPostCreatedListener
  com.architectica.socialcomponents.main.post.BaseCreatePostPresenter -up-|> com.architectica.socialcomponents.main.pickImageBase.PickImagePresenter
  com.architectica.socialcomponents.main.post.BaseCreatePostPresenter o-- com.architectica.socialcomponents.managers.PostManager : postManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
